--- a/xarray/static/css/style.css
+++ b/xarray/static/css/style.css
@@ -14,6 +14,7 @@
 }
 
 html[theme=dark],
+html[data-theme=dark],
 body[data-theme=dark],
 body.vscode-dark {
   --xr-font-color0: rgba(255, 255, 255, 1);
