fix html repr indexes section

--- a/xarray/static/css/style.css
+++ b/xarray/static/css/style.css
@@ -75,6 +75,7 @@ body.vscode-dark {
 .xr-section-item input {
   display: inline-block;
   opacity: 0;
+  height: 0;
 }
 
 .xr-section-item input + label {
