Add prettier pre-commit hook

--- a/doc/_static/style.css
+++ b/doc/_static/style.css
@@ -1,10 +1,10 @@
 table.colwidths-given {
-    table-layout: fixed;
-    width: 100%;
+  table-layout: fixed;
+  width: 100%;
 }
 table.docutils td {
-    white-space: unset;
-    word-wrap: break-word;
+  white-space: unset;
+  word-wrap: break-word;
 }
 
 .bd-header-announcement {
@@ -13,10 +13,13 @@ table.docutils td {
 
 /* Reduce left and right margins */
 
-.container, .container-lg, .container-md, .container-sm, .container-xl {
+.container,
+.container-lg,
+.container-md,
+.container-sm,
+.container-xl {
   max-width: 1350px !important;
 }
-
 
 /* Copied from
 https://github.com/bokeh/bokeh/blob/branch-2.4/sphinx/source/bokeh/static/custom.css
@@ -215,7 +218,7 @@ dt:target {
  https://github.com/pandas-dev/pandas-sphinx-theme/issues/6 */
 main *:target::before {
   display: block;
-  content: '';
+  content: "";
   height: var(--navbar-height);
   margin-top: calc(-1 * var(--navbar-height));
 }
